Kuvien Koko korjaus

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Amazon forest</title>
     <link rel="stylesheet" href="css/etusivu.css">
 </head>
@@ -24,7 +26,7 @@
         <section class="content">
             <h1 class="Image-title">Amazon forest</h1>
             <div class="hero-image">
-                <img src="amazonforesthero.jpg" alt="" class="content-image" width="1400" height="500">
+                <img src="amazonforesthero.jpg" alt="" class="content-image" >
             </div>
             <p class="content-text">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -32,6 +34,7 @@
                 tenetur iure reiciendis, quaerat pariatur culpa, consectetur nostrum
                 dolorum
         </section>
+       
     </main>
 </body>
 
