--- a/products.html
+++ b/products.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon forest - Products</title>
     <link rel="stylesheet" href="css/products.css">
 </head>
@@ -24,9 +25,9 @@
 
         <section class="content">
             <div class="hero-image">
-                <img src="2amazonforesthero.png" alt="" class="content-image" width="1400" height="500">
+                <img src="2amazonforesthero.png" alt=""  class="content-image">
             </div>
-            <p class="content-text">
+            <p class="content-text">    
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 Ipsam sed est repudiandae nisi et quis ipsum quibusdam totam
                 tenetur iure reiciendis, quaerat pariatur culpa, consectetur nostrum
